# portable-endianness

./: README.md  meson.build
include/: portable-endianness.h
src/: portable-endianness.c
tests/: test-portable-endianness.cpp
